# khalzam-cli

./: Cargo.toml  README.MD  setup.sh
src/: main.rs
